# logseq-cli-browser

./: .mcp-trusted-servers.json  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  Gemfile  README.md  chaz  computer  computer.db  current_todos.json  new_todos.json  pyproject.toml  requirements.txt  sample_todos.json
agents/: directive_agent.py  engage_agent.py
context/: session-1750316445.json
directives/: directive-cfc0394c-output_1750340970.md  directive-cfc0394c-output_1750340970.out  directive-cfc0394c-task-8c81d559.md  directive-cfc0394c-task-8c81d559.out  session-1750340990.json
directives/context/: session-1750310828.json  session-1750316475.json  session-1750318561.json  session-1750318608.json  session-1750318677.json  session-1750341684.json
directives/failed/: directive-1b287b76-task-c776e413.md  directive-2673a9e3-todo-003.md  directive-291c872b-task-7d20dd16.md  directive-2f9c7eaf-todo-001.md  directive-37e37a17-task-3374967c.md  directive-6bfd12c9-task-b47ea0b8.err  directive-6bfd12c9-task-b47ea0b8.md  directive-78ae2c52-task-e88bbd1b.md  directive-8ea528e2-todo-002.md  directive-901773a9-task-165f1c3e.md  directive-9f40ad69-task-3034c428.md  directive-b0c71e36-task-efb04d59.md  directive-cfc0394c-task-a04a64d0.md  directive-cfc0394c-task-a83855fe.md  directive-cfc0394c-task-d2ad3de1.err  directive-cfc0394c-task-d2ad3de1.md  directive-d244c228-task-546491f5.err  directive-d244c228-task-546491f5.md  directive-f8cb44a8-task-16faa5a0.err  directive-f8cb44a8-task-16faa5a0.md  (+3 more)
lib/: ai_client.py  batch_processor.py  config_validator.py  database.py  interactive.py  logger.py  mcp_client_cli.py  mcp_server.py  quarantine_cli.py  secure_mcp_client.py  secure_quarantine.py  security.py  security_audit.py  settings.py  template_manager.py  todo_directive_bridge.py
pages/: quarantined_prompt.md
pages/prompts/: cli.prompt  (+1 more)
templates/: api-project.md  claude-todo.md  code-review.md  directive-out.md  directive-prompt.md  directives-prompt.md  engage-agent-prompt.md
test/: logseq_browser_test.rb  test_helper.rb
tests/: conftest.py  test_ai_client.py  test_directive_agent.py  test_settings.py
(+77 files in other folders)
